--- a/debian/control
+++ b/debian/control
@@ -31,7 +31,6 @@ Description: MeeGo Touch views library
  MeeGo Touch views framework library
 
 Package: libmeegotouch-bin
-Replaces: libmeegotouch0
 Architecture: any
 Depends: ${misc:Depends}, ${launcher:Depends}, ${shlibs:Depends}
 Description: MeeGo Touch binary files
@@ -65,6 +64,8 @@ Section: devel
 Architecture: any
 Depends: ${shlibs:Depends}, meegotouch-demos-widgetsgallery-l10n-engineering-english (= ${Source-Version})
 Suggests: meegotouch-demos-widgetsgallery-l10n-ar, meegotouch-demos-widgetsgallery-l10n-de, meegotouch-demos-widgetsgallery-l10n-en, meegotouch-demos-widgetsgallery-l10n-fi, meegotouch-demos-widgetsgallery-l10n-ur, meegotouch-demos-widgetsgallery-l10n-zh-cn
+Conflicts: dui-demos-widgetsgallery
+Replaces: dui-demos-widgetsgallery
 Description: Demo application for MeeGo Touch
 
 Package: meegotouch-demos-widgetsgallery-tests
@@ -77,6 +78,8 @@ Package: meegotouch-demos-widgetsgallery-dbg
 Section: devel
 Architecture: any
 Depends: meegotouch-demos-widgetsgallery (= ${Source-Version})
+Conflicts: dui-demos-widgetsgallery-dbg
+Replaces: dui-demos-widgetsgallery-dbg
 Description: Demo application for MeeGo Touch
  This package contains debug symbols.
 
@@ -84,70 +87,64 @@ Package: meegotouch-demos-widgetsgallery-l10n-engineering-english
 Section: devel
 Architecture: any
 Enhances: meegotouch-demos-widgetsgallery
-Replaces: meegotouch-demos-widgetsgallery (<< 0.17.0-0)
 Description: Engineering English translations for widgetsgallery
 
 Package: meegotouch-demos-widgetsgallery-l10n-ar
 Section: devel
 Architecture: any
 Enhances: meegotouch-demos-widgetsgallery
-Replaces: meegotouch-demos-widgetsgallery (<< 0.17.0-0)
 Description: Arabic translations for widgetsgallery
 
 Package: meegotouch-demos-widgetsgallery-l10n-de
 Section: devel
 Architecture: any
 Enhances: meegotouch-demos-widgetsgallery
-Replaces: meegotouch-demos-widgetsgallery (<< 0.17.0-0)
 Description: German translations for widgetsgallery
 
 Package: meegotouch-demos-widgetsgallery-l10n-en
 Section: devel
 Architecture: any
 Enhances: meegotouch-demos-widgetsgallery
-Replaces: meegotouch-demos-widgetsgallery (<< 0.17.0-0)
 Description: English translations for widgetsgallery
 
 Package: meegotouch-demos-widgetsgallery-l10n-fi
 Section: devel
 Architecture: any
 Enhances: meegotouch-demos-widgetsgallery
-Replaces: meegotouch-demos-widgetsgallery (<< 0.17.0-0)
 Description: Finnish translations for widgetsgallery
 
 Package: meegotouch-demos-widgetsgallery-l10n-hu
 Section: devel
 Architecture: any
 Enhances: meegotouch-demos-widgetsgallery
-Replaces: meegotouch-demos-widgetsgallery (<< 0.17.0-0)
 Description: Hungarian translations for widgetsgallery
 
 Package: meegotouch-demos-widgetsgallery-l10n-ur
 Section: devel
 Architecture: any
 Enhances: meegotouch-demos-widgetsgallery
-Replaces: meegotouch-demos-widgetsgallery (<< 0.17.0-0)
 Description: Urdu translations for widgetsgallery
 
 Package: meegotouch-demos-widgetsgallery-l10n-zh-cn
 Section: devel
 Architecture: any
 Enhances: meegotouch-demos-widgetsgallery
-Replaces: meegotouch-demos-widgetsgallery (<< 0.17.0-0)
 Description: Simplified Chinese translations for widgetsgallery
 
 Package: meegotouch-demos-plainqt
 Section: devel
 Architecture: any
 Depends: ${shlibs:Depends}
-Replaces: meegotouch-demos-plainqt (<< 0.16.0-1)
+Conflicts: dui-demos-plainqt
+Replaces: dui-demos-plainqt
 Description: Demo applications showing the capabilities of the plain qt style.
 
 Package: meegotouch-demos-plainqt-dbg
 Section: devel
 Architecture: any
 Depends: meegotouch-demos-plainqt (= ${Source-Version})
-Replaces: meegotouch-demos-plainqt-dbg (<< 0.16.0-1)
+Conflicts: dui-demos-plainqt-dbg
+Replaces: dui-demos-plainqt-dbg
 Description: debug symbols of the plain qt examples
 
 Package: meegotouch-demos-appletinstallationsource
@@ -232,47 +229,40 @@ Package: libmeegotouch-l10n-engineering-english
 Section: devel
 Architecture: any
 Enhances: libmeegotouchcore0
-Replaces: meegotouch-demos-widgetsgallery (<< 0.17.0-0)
 Description: Engineering English translations for libmeegotouch
 
 Package: libmeegotouch-l10n-ar
 Section: devel
 Architecture: any
 Enhances: libmeegotouchcore0
-Replaces: meegotouch-demos-widgetsgallery (<< 0.17.0-0)
 Description: Arabic translations for libmeegotouch
 
 Package: libmeegotouch-l10n-de
 Section: devel
 Architecture: any
 Enhances: libmeegotouchcore0
-Replaces: meegotouch-demos-widgetsgallery (<< 0.17.0-0)
 Description: German translations for libmeegotouch
 
 Package: libmeegotouch-l10n-en
 Section: devel
 Architecture: any
 Enhances: libmeegotouchcore0
-Replaces: meegotouch-demos-widgetsgallery (<< 0.17.0-0)
 Description: English translations for libmeegotouch
 
 Package: libmeegotouch-l10n-fi
 Section: devel
 Architecture: any
 Enhances: libmeegotouchcore0
-Replaces: meegotouch-demos-widgetsgallery (<< 0.17.0-0)
 Description: Finnish translations for libmeegotouch
 
 Package: libmeegotouch-l10n-ur
 Section: devel
 Architecture: any
 Enhances: libmeegotouchcore0
-Replaces: meegotouch-demos-widgetsgallery (<< 0.17.0-0)
 Description: Urdu translations for libmeegotouch
 
 Package: libmeegotouch-l10n-zh-cn
 Section: devel
 Architecture: any
 Enhances: libmeegotouchcore0
-Replaces: meegotouch-demos-widgetsgallery (<< 0.17.0-0)
 Description: Simplified Chinese translations for libmeegotouch
