Changes: Fix M_INC_DIR variable
RevBy: Vesa
Details: M_INC_DIR now correctly points to include/meegotouch

--- a/mkspecs/features/meegotouch_defines.prf.in
+++ b/mkspecs/features/meegotouch_defines.prf.in
@@ -1,7 +1,7 @@
 ##################################################################
 # MDefinesFeature
 #
-# Global DirectUI definitions
+# Global MeeGo Touch definitions
 ######################################################################
 
 M_MAJOR_VERSION = 0
