--- a/demos/widgetsgallery/widgetsgallery.desktop
+++ b/demos/widgetsgallery/widgetsgallery.desktop
@@ -4,5 +4,4 @@ Name=Widgets Gallery
 Icon=icon-l-video
 Exec=widgetsgallery
 X-Maemo-Service=com.nokia.widgetsgallery
-Categories=Demos;
-OnlyShowIn=X-DUI;
+OnlyShowIn=X-MeeGo;
