--- a/demos/qtstyledialogs/qtstyledialogs-windows-style.desktop
+++ b/demos/qtstyledialogs/qtstyledialogs-windows-style.desktop
@@ -4,5 +4,4 @@ Name=QtStyle Dialogs Example (Windows style)
 Icon=icon-l-video
 Exec=qtstyledialogs -style windows
 X-Maemo-Service=com.nokia.qtstyledialogs
-Categories=Demos;
-OnlyShowIn=X-DUI;
+OnlyShowIn=X-MeeGo;
