--- a/demos/qtstyleexample/qtstyleexample.desktop
+++ b/demos/qtstyleexample/qtstyleexample.desktop
@@ -4,5 +4,4 @@ Name=QtStyle Example
 Icon=icon-l-video
 Exec=qtstyleexample -style iqs
 X-Maemo-Service=com.nokia.qtstyleexample
-Categories=Demos;
-OnlyShowIn=X-DUI;
+OnlyShowIn=X-MeeGo;
