--- a/examples/chaining/chainingexampleapp1/chainingexampleapp1.desktop
+++ b/examples/chaining/chainingexampleapp1/chainingexampleapp1.desktop
@@ -4,5 +4,4 @@ Name=Chaining Example App1
 Icon=icon-l-video
 X-Maemo-Service=com.nokia.chainingexampleapp1
 Exec=chainingexampleapp1
-Categories=Demos;
-OnlyShowIn=X-DUI;
+OnlyShowIn=X-MeeGo;
