--- a/examples/lifecycle/lifecycle.desktop
+++ b/examples/lifecycle/lifecycle.desktop
@@ -4,5 +4,4 @@ Name=Lifecycle Demo
 Icon=icon-l-video
 Exec=lifecycle
 X-Maemo-Service=com.nokia.lifecycle
-Categories=DUI;Demos;
-OnlyShowIn=DUI;
+OnlyShowIn=X-MeeGo;
