Changes: Replaced DUI_INSTALL_BIN with M_INSTALL_BIN in all .service files
RevBy: TrustMe

--- a/demos/qtstyleexample/com.nokia.qtstyleexample.service.in
+++ b/demos/qtstyleexample/com.nokia.qtstyleexample.service.in
@@ -1,3 +1,3 @@
 [D-BUS Service]
 Name=com.nokia.qtstyleexample
-Exec=@DUI_INSTALL_BIN@/qtstyleexample -style iqs
+Exec=@M_INSTALL_BIN@/qtstyleexample -style iqs
