--- a/demos/qtstyledialogs/com.nokia.qtstyledialogs.service.in
+++ b/demos/qtstyledialogs/com.nokia.qtstyledialogs.service.in
@@ -1,3 +1,3 @@
 [D-BUS Service]
 Name=com.nokia.qtstyledialogs
-Exec=@DUI_INSTALL_BIN@/qtstyledialogs -style iqs
+Exec=@M_INSTALL_BIN@/qtstyledialogs -style iqs
