Changes: continuoussliderpage.cpp and continuoussliderpage.h were deleted          from demos/widgetsgallery directory          all translation files entries related to these files were deleted
RevBy: Mike Fabian

--- a/debian/.gitignore
+++ b/debian/.gitignore
@@ -18,6 +18,7 @@ libmeegotouch-l10n-de
 libmeegotouch-l10n-en
 libmeegotouch-l10n-engineering-english
 libmeegotouch-l10n-fi
+libmeegotouch-l10n-hu
 libmeegotouch-l10n-ur
 libmeegotouch-l10n-zh-cn
 libmeegotouch-benchmarks
