New: New option to device.conf which states if target device is supposed to show status bar.
RevBy: Dominik Kapusta, Tomas Junnonen
Details: New option in device.conf, added new variable to MDeviceProfileClass.
MApplication Window checks now if it should create StatusBar. Added some checks to prevent seg fault.

--- a/src/corelib/workspace/devices.conf
+++ b/src/corelib/workspace/devices.conf
@@ -3,40 +3,47 @@ resolutionX=864
 resolutionY=480
 ppiX=261
 ppiY=261
+showStatusBar=true
 
 [N900]
 resolutionX=800
 resolutionY=480
 ppiX=261
 ppiY=261
+showStatusBar=false	
 
 [N95]
 resolutionX=240
 resolutionY=320
 ppiX=153
 ppiY=153
+showStatusBar=false	
 
 [Pineapple]
 resolutionX=480
 resolutionY=320
 ppiX=163
 ppiY=163
+showStatusBar=false	
 
 [N95i]
 resolutionX=240
 resolutionY=800
 ppiX=152
 ppiY=152
+showStatusBar=false	
 
 [QVGAL]
 resolutionX=320
 resolutionY=240
 ppiX=152
 ppiY=152
+showStatusBar=true
 
 [N97]
 resolutionX=640
 resolutionY=360
 ppiX=209
 ppiY=209
+showStatusBar=false	
 
