--- a/debian/rules
+++ b/debian/rules
@@ -156,7 +156,7 @@ binary-arch: build install
 	dh_fixperms
 	dh_makeshlibs
 	dh_installdeb
-	dh_shlibdeps
+	dh_shlibdeps -V
 	dh_gencontrol
 	dh_md5sums
 	dh_builddeb --destdir=$(DEBDIR)
