Changes: Improve N900 support
RevBy: Max Waterman, Daniel d'Andrada
Details:
1. ..widgetsgallery.install file: desktop file and icon to wildcard
2. rules: dh_prep for older debhelper
3. control: icon for widgetsgallery in deb manager
4. differences in ContactModel/PhoneBookModel
5. EGL defines
6. EOLs for compiler
7.Added comment in case this change is needed on other platforms too..
8.Desktop file and icon unification
9. missing semicolon for maemo6 build
10.new icons for fremantle and harmattan

--- a/debian/rules
+++ b/debian/rules
@@ -109,7 +109,11 @@ clean:
 install: build
 	dh_testdir
 	dh_testroot
+ifeq (,$(filter n900,$(TMP_BUILD_OPTS))) #fremantle debhelper is older..
 	dh_prep
+else
+	dh_clean -k
+endif
 	dh_installdirs
 
 	# Add here commands to install the package into debian/tmp
